--- a/Website/index.html
+++ b/Website/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <meta name="description" 
-content="Cute and curzed pictures of my dog Dozer. Learn more about him here.">
+        <meta name=description content="Cute and cursed pictures of my dog Dozer. Learn more about him here.">
+        <meta name=PublicationDate content='2020-09-01'>
         <title>DOZER</title>
         <link rel='stylesheet' href='css/main.css'>
     </head>
