--- a/Website/index.html
+++ b/Website/index.html
@@ -12,9 +12,9 @@
         <nav>
             <b>MENU</b>
             <ol>
-                <a rel="follow" href="/Users/melaniewilliamsmac/Documents/GitHub/mel088.github.io/Website/cutepics.html"><li>Cute Dozer Pics</li></a>
-                <a rel="follow" href="/Users/melaniewilliamsmac/Documents/GitHub/mel088.github.io/Website/cursedpics.html"><li>Cursed Dozer Pics</li></a>
-                <a rel="follow" href="/Users/melaniewilliamsmac/Documents/GitHub/mel088.github.io/Website/aboutdozer.html"><li>About Dozer</li></a>
+                <a rel="follow" href="https://mel088.github.io/Website/cutepics.html"><li>Cute Dozer Pics</li></a>
+                <a rel="follow" href="https://mel088.github.io/Website/cursedpics.html"><li>Cursed Dozer Pics</li></a>
+                <a rel="follow" href="https://mel088.github.io/Website/aboutdozer.html"><li>About Dozer</li></a>
             </ol>
         </nav>
         <p>
