--- a/Website/cursedpics.html
+++ b/Website/cursedpics.html
@@ -11,7 +11,7 @@
         <p>
 
         </p>
-        <img src="/Users/melaniewilliamsmac/Downloads/IMG_6834.jpg" style="width:500;height:500;"/>
+        <img src="/Users/melaniewilliamsmac/Documents/GitHub/mel088.github.io/Website/IMG_6834.jpg" style="width:500;height:500;"/>
         <p>
             
         </p>
