--- a/Website/cursedpics.html
+++ b/Website/cursedpics.html
@@ -7,7 +7,7 @@
         <header>
             <h1><strong>CURSED DOZER PICS</strong></h1>
         </header>
-        <img src="/Users/melaniewilliamsmac/Downloads/IMG_6836.jpg" style="width:500;height:500;" alt="A blurry picture of my yellow lab Dozer looking off into the distance."/>
+        <img src="mel088.github.io/Website/img/img_6836.jpg" style="width:500;height:500;" alt="A blurry picture of my yellow lab Dozer looking off into the distance."/>
         <p>
 
         </p>
