--- a/Website/cursedpics.html
+++ b/Website/cursedpics.html
@@ -7,13 +7,13 @@
         <header>
             <h1><strong>CURSED DOZER PICS</strong></h1>
         </header>
-        <img src="Website/img/IMG_6836.jpg" style="width:500;height:500;" alt="A blurry picture of my yellow lab Dozer looking off into the distance."/>
+        <img src="img/IMG_6836.jpg" style="width:500;height:500;" alt="A blurry picture of my yellow lab Dozer looking off into the distance."/>
         <p>
 
         </p>
-        <img src="/Users/melaniewilliamsmac/Downloads/IMG_6834.jpg" style="width:500;height:500;"/>
+        <img src="img/IMG_6834.jpg" style="width:500;height:500;"/>
         <p>
             
         </p>
-        <img src="/Users/melaniewilliamsmac/Downloads/IMG_6835.jpg" style="width:500;height:500;"/>
+        <img src="img/IMG_6835.jpg" style="width:500;height:500;"/>
 </html>
