--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -9,12 +9,12 @@
         <p>
 
         </p>
-        <h1><img src="/Users/melaniewilliamsmac/Documents/GitHub/mel088.github.io/Website/img/IMG_1312.jpg" style="width:200;height:200;"/></h1>
+        <h1><img src="img/img_1312.jpg" style="width:200;height:200;"/></h1>
         <p>
 
         </p>
         <p>
-            <h1><body>Dozer is such a good boy!</body></h1>
+            <h1><body>Dozer is a good boy!</body></h1>
         </p>
 
         <p>
