--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -23,11 +23,11 @@
 
         <p>
             Dozer loves his daily routine. He starts off his day with a trail run to the creek. He cools off in the water and heads back. When he gets home, he gets washed with the hose, shampoo, and conditioner.
-            Then he gets dried off and fed. He passes out for about seven hours, sleeping all over the house with his legs in the air.
+            Then he dries off and eats. He passes out for about seven hours, sleeping all over the house with his legs in the air.
         </p>
 
         <p>
-            In the afternoon, he gets fed again and goes on a walk around the neighborhood. He is very social with the other dogs and he loves people. When he gets home, we reward him with
+            In the afternoon, he eats again and goes on a walk around the neighborhood. He is very social with the other dogs and he loves people. When he gets home, we reward him with
             treats and then he lays on my mom's lap to eat a big treat. After that, he barks a bit until he dozes off to sleep again.
         </p>
 
