--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -9,7 +9,7 @@
         <p>
 
         </p>
-        <h1><img src="https://raw.githubusercontent.com/mel088/mel088.github.io/master/Website/img/IMG_1312.jpg" style="width:200;height:200;"/></h1>
+        <h1><img src="img/img_1312.jpg" style="width:200;height:200;"/></h1>
         <p>
 
         </p>
