--- a/Website/index.html
+++ b/Website/index.html
@@ -29,6 +29,7 @@
             <br>
             <br>
             <br>
+            <img src="Downloads/58aeffb2c869e092af51ee74.png" style="width:100;height:100;"/>
         </p>
         <nav>
             Follow <a href="https://github.com/mikeizbicki/cmc-csci040">CSCI040</a>
