--- a/Website/cutepics.html
+++ b/Website/cutepics.html
@@ -7,13 +7,13 @@
         <header>
             <h1><strong>CUTE DOZER PICS</strong></h1>
         </header>
-        <img src="img/img_6839.jpg" style="width:500;height:500;"/>
+        <img src="Downloads/img_6839.jpg" style="width:500;height:500;"/>
         <p>
 
         </p>
-        <img src="img/img_6838.jpg" style="width:500;height:500;"/>
+        <img src="Downloads/img_6838.jpg" style="width:500;height:500;"/>
         <p>
             
         </p>
-        <img src="img/img_6837.jpg" style="width:500;height:500;"/>
+        <img src="Downloads/img_6837.jpg" style="width:500;height:500;"/>
 </html>
