--- a/Website/cutepics.html
+++ b/Website/cutepics.html
@@ -7,7 +7,7 @@
         <header>
             <h1><strong>CUTE DOZER PICS</strong></h1>
         </header>
-        <img src="Website/img/IMG_6839.jpg" style="width:500;height:500;"/>
+        <h1><img src="Website/img/IMG_6839.jpg" style="width:500;height:500;"/></h1>
         <p>
 
         </p>
