--- a/Website/cutepics.html
+++ b/Website/cutepics.html
@@ -15,5 +15,5 @@
         <p>
             
         </p>
-        <h1><img src="Website/img/IMG_6837.jpg" style="width:500;height:500;"/></h1>
+        <h1><img src="Website/img/img_6837.jpg" style="width:500;height:500;"/></h1>
 </html>
