--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -9,7 +9,7 @@
         <p>
 
         </p>
-        <h1><img src="file:///Users/melaniewilliamsmac/Desktop/img_6837-1.jpg" style="width:200;height:200;"/></h1>
+        <h1><img src="file:///Users/melaniewilliamsmac/Desktop/img_6837-1.jpg" style="width:200;height:200;"></h1>
         <p>
 
         </p>
