--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -9,7 +9,9 @@
         <p>
 
         </p>
-        <h1><img src="mel088.github.io/Website/img/IMG_1312.jpg" style="width:200;height:200;"/></h1>
+        <h1>
+            <img src="img/about.jpg" style="width:200;height:200;"/>
+        </h1>
         <p>
 
         </p>
