--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -10,7 +10,7 @@
 
         </p>
         <h1>
-            <img src="img/about.jpg" style="width:200;height:200;"/>
+            <img src='img/about.jpg'/>
         </h1>
         <p>
 
