--- a/Website/cursedpics.html
+++ b/Website/cursedpics.html
@@ -11,7 +11,7 @@
         <p>
 
         </p>
-        <img src="img/img_6834.jpg" style="width:500;height:500;"/>
+        <img src="img/fourth.jpg" style="width:500;height:500;"/>
         <p>
             
         </p>
