--- a/Website/cursedpics.html
+++ b/Website/cursedpics.html
@@ -7,7 +7,7 @@
         <header>
             <h1><strong>CURSED DOZER PICS</strong></h1>
         </header>
-        <img src="img/img_6836.jpg" style="width:500;height:500;" alt="A blurry picture of my yellow lab Dozer looking off into the distance."></img>
+        <img src="img/six.jpg" style="width:500;height:500;" alt="A blurry picture of my yellow lab Dozer looking off into the distance."></img>
         <p>
 
         </p>
@@ -15,5 +15,5 @@
         <p>
             
         </p>
-        <img src="img/img_6835.jpg" style="width:500;height:500;"/>
+        <img src="img/five.jpg" style="width:500;height:500;"/>
 </html>
