--- a/Website/cutepics.html
+++ b/Website/cutepics.html
@@ -11,9 +11,9 @@
         <p>
 
         </p>
-        <h1><img src="Website/img/IMG_6838.jpg" style="width:500;height:500;"/></h1>
+        <h1><img src="img/eight.jpg" style="width:500;height:500;"/></h1>
         <p>
             
         </p>
-        <h1><img src="Website/img/img_6837.jpg" style="width:500;height:500;"/></h1>
+        <h1><img src="img/seven.jpg" style="width:500;height:500;"/></h1>
 </html>
