--- a/Website/cursedpics.html
+++ b/Website/cursedpics.html
@@ -11,9 +11,9 @@
         <p>
 
         </p>
-        <img src="img/fourth.jpg" style="width:500;height:500;"/>
+        <img src="img/fourth.jpg" style="width:500;height:500;"></img>
         <p>
             
         </p>
-        <img src="img/five.jpg" style="width:500;height:500;"/>
+        <img src="img/five.jpg" style="width:500;height:500;"></img>
 </html>
