--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -10,7 +10,7 @@
 
         </p>
         <h1>
-            <img src='img/about.jpg'/>
+            <img src='img/about.jpg'></img>
         </h1>
         <p>
 
