--- a/Website/cursedpics.html
+++ b/Website/cursedpics.html
@@ -7,13 +7,13 @@
         <header>
             <h1><strong>CURSED DOZER PICS</strong></h1>
         </header>
-        <img src="img/six.jpg" style="width:500;height:500;" alt="A blurry picture of my yellow lab Dozer looking off into the distance."></img>
+        <img src='img/six.jpg' style="width:500;height:500;" alt="A blurry picture of my yellow lab Dozer looking off into the distance."></img>
         <p>
 
         </p>
-        <img src="img/fourth.jpg" style="width:500;height:500;"></img>
+        <img src='img/fourth.jpg' style="width:500;height:500;"></img>
         <p>
             
         </p>
-        <img src="img/five.jpg" style="width:500;height:500;"></img>
+        <img src='img/five.jpg' style="width:500;height:500;"></img>
 </html>
