--- a/Website/index.html
+++ b/Website/index.html
@@ -32,8 +32,8 @@
             <!--<img src="Downloads/58aeffb2c869e092af51ee74.png" style="width:100;height:100;"/>-->
         </p>
         <nav>
-            Follow <a href="https://github.com/mikeizbicki/cmc-csci040">CSCI040</a>
-            <br>Follow <a href="https://izbicki.me">my professor</a>
+            <div>Follow</div> <a href="https://github.com/mikeizbicki/cmc-csci040">CSCI040</a>
+            <br><div>Follow</div> <a href="https://izbicki.me">my professor</a>
         </nav>
 
        <!-- Article Menu
