--- a/Website/index.html
+++ b/Website/index.html
@@ -33,7 +33,11 @@
         </p>
         <nav>
             <div>Follow</div> <a href="https://github.com/mikeizbicki/cmc-csci040">CSCI040</a>
-            <br><div>Follow</div> <a href="https://izbicki.me">my professor</a>
+            <br>
+            <p>
+
+            </p>
+            <div>Follow</div> <a href="https://izbicki.me">my professor</a>
         </nav>
 
        <!-- Article Menu
