--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -30,7 +30,7 @@
 
         <p>
             In the afternoon, he eats again and goes on a walk around the neighborhood. He is very social with the other dogs and he loves people. When he gets home, we reward him with
-            treats and then he lays on my mom's lap to eat a big treat. After that, he barks a bit until he <div>dozes</div> off to sleep again.
+            treats and then he lays on my mom's lap to eat a big treat. <div>After that, he barks a bit until he dozes off to sleep again.</div>
         </p>
 
         </header>
