--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -20,7 +20,9 @@
         </p>
 
         <p>
+            <span>
             Dozer is a yellow lab. He is almost two years old and over one-hunred pounds! He doesn't realize how big he is. Although he weighs as much as some of my friends, he is a lap-dog. He loves cuddles.
+            </span>
         </p>
 
         <p>
