--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -19,8 +19,7 @@
             <h1><body>Dozer is a good boy!</body></h1>
         </p>
 
-        <p>
-            <span>
+        <p> <span>
             Dozer is a yellow lab. He is almost two years old and over one-hunred pounds! He doesn't realize how big he is. Although he weighs as much as some of my friends, he is a lap-dog. He loves cuddles.
             </span>
         </p>
