--- a/Website/cursedpics.html
+++ b/Website/cursedpics.html
@@ -13,9 +13,7 @@
         </p>-->
         <img src='img/fourth.jpg' style="width:500;height:500;" alt="Dozer laying on a carpet with his head under a chair."></img>
         <p>
-        <body> <span>
-            Mood.</span>
-        </body>   
+            <body><span>Mood.</span></body>   
         </p>
         <img src='img/five.jpg' style="width:500;height:500;"></img>
 </html>
