--- a/Website/index.html
+++ b/Website/index.html
@@ -6,8 +6,6 @@
         <link rel='stylesheet' href='css/main.css'>
     </head>
     <body>
-        <div id="fb-root"></div>
-        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="Z1pzyx3m"></script>
         <header>
             <h1><strong>DOZER THE DOG</strong></h1>
         </header>
@@ -41,7 +39,9 @@
             </p>
             <div>Follow</div> <a href="https://izbicki.me">my professor</a>
             <br>
-            <div class="fb-like" data-href="https://mel088.github.io/Website/" data-width="400" data-layout="standard" data-action="like" data-size="large" data-share="true"></div>
+            <div id="fb-root"></div>
+            <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="9OZdb9rS"></script>
+            <div class="fb-like" data-href="https://mel088.github.io/Website/" data-width="" data-layout="box_count" data-action="like" data-size="large" data-share="true"></div>  
         </nav>
 
        <!-- Article Menu
