--- a/Website/index.html
+++ b/Website/index.html
@@ -41,7 +41,7 @@
             <br>
             <div id="fb-root"></div>
             <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="9OZdb9rS"></script>
-            <div class="fb-like" data-href="https://mel088.github.io/" data-width="" data-layout="box_count" data-action="like" data-size="large" data-share="true"></div>  
+            <div class="fb-like" data-href="https://mel088.github.io/Website/" data-width="" data-layout="box_count" data-action="like" data-size="large" data-share="true"></div>  
         </nav>
 
        <!-- Article Menu
