--- a/Website/index.html
+++ b/Website/index.html
@@ -40,7 +40,7 @@
             <div>Follow</div> <a href="https://izbicki.me">my professor</a>
             <br>
             <br>
-            <div id="fb-root">Like</div>
+            <div id="fb-root"></div>
             <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="9OZdb9rS"></script>
             <div class="fb-like" data-href="https://mel088.github.io/" data-width="" data-layout="box_count" data-action="like" data-size="large" data-share="true"></div>
             <br>
