--- a/Website/index.html
+++ b/Website/index.html
@@ -17,6 +17,7 @@
                 <a rel="follow" href="https://mel088.github.io/Website/aboutdozer.html"><li>About Dozer</li></a>
             </ol>
         </nav>
+        <h1><img src="img/front.jpg" style="width:2000;height:2000;"/></h1>
         <p>
             <br>
             <br>
