--- a/Website/index.html
+++ b/Website/index.html
@@ -25,11 +25,6 @@
             <br>
             <br>
             <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
             <!--<img src="Downloads/58aeffb2c869e092af51ee74.png" style="width:100;height:100;"/>-->
         </p>
         <nav>
@@ -38,7 +33,11 @@
             <p>
 
             </p>
-            <div>Follow</div> <a href="https://izbicki.me">my professor</a>
+            <div>Check out</div> <a href="https://tkapoor22.github.io/">this food diary</a>
+            <br>
+            <div>Check out</div> <a href="https://rmagill22.github.io/">these cats</a>
+            <br>
+            <div>Follow</div> <a href="https://ymacias22.github.io/">my classmate's website</a>
             <br>
             <br>
             <div id="fb-root"></div>
