--- a/Website/index.html
+++ b/Website/index.html
@@ -29,15 +29,16 @@
         </p>
         <nav>
             <div>Follow</div> <a href="https://github.com/mikeizbicki/cmc-csci040">CSCI040</a>
+            <div>and follow</div> <a href="https://izbicki.me">my professor</a>
             <br>
-            <p>
-
-            </p>
+            <br>
             <div>Check out</div> <a href="https://tkapoor22.github.io/">this food diary</a>
+            <br>
             <br>
             <div>Check out</div> <a href="https://rmagill22.github.io/">these cats</a>
             <br>
-            <div>Follow</div> <a href="https://ymacias22.github.io/">my classmate's website</a>
+            <br>
+            <div>Check out</div> <a href="https://ymacias22.github.io/">my classmate's website</a>
             <br>
             <br>
             <div id="fb-root"></div>
