--- a/Website/index.html
+++ b/Website/index.html
@@ -22,8 +22,9 @@
             <!--<img src="Downloads/58aeffb2c869e092af51ee74.png" style="width:100;height:100;"/>-->
         </p>
         <nav>
-            <div>Follow</div> <a href="https://github.com/mikeizbicki/cmc-csci040">CSCI040</a>
-            <div>and follow</div> <a href="https://izbicki.me">my professor</a>
+            <div>Follow Dozer on Insta!</div> <a href="https://www.instagram.com/dozer.the.doggg/?hl=af">here</a>
+            <br>
+            <div>Follow</div> <a href="https://github.com/mikeizbicki/cmc-csci040">CSCI040</a> <div>and follow</div> <a href="https://izbicki.me">my professor</a>
             <br>
             <br>
             <div>Check out</div> <a href="https://tkapoor22.github.io/">this food diary</a>
