--- a/Website/index.html
+++ b/Website/index.html
@@ -22,7 +22,7 @@
             <!--<img src="Downloads/58aeffb2c869e092af51ee74.png" style="width:100;height:100;"/>-->
         </p>
         <nav>
-            <div>Follow Dozer on Insta!</div> <a href="https://www.instagram.com/dozer.the.doggg/?hl=af">here</a>
+            <div><b>Follow Dozer on Insta!</b></div> <a href="https://www.instagram.com/dozer.the.doggg/?hl=af">here</a>
             <br>
             <div>Follow</div> <a href="https://github.com/mikeizbicki/cmc-csci040">CSCI040</a> <div>and follow</div> <a href="https://izbicki.me">my professor</a>
             <br>
@@ -33,7 +33,7 @@
             <div>Check out</div> <a href="https://rmagill22.github.io/">these cats</a>
             <br>
             <br>
-            <div>Check out</div> <a href="https://ymacias22.github.io/">my classmate's website</a>
+            <div>Check out</div> <a href="https://ymacias-1.github.io/webpage/">more cute animals</a>
             <br>
             <br>
             <div id="fb-root"></div>
