--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -24,8 +24,7 @@
             </span>
         </p>
 
-        <p class="special">
-            Dozer loves his daily routine. He starts off his day with a trail run to the creek. He cools off in the water and heads back. When he gets home, he gets washed with the hose, shampoo, and conditioner.
+        <p class="special">Dozer loves his daily routine. He starts off his day with a trail run to the creek. He cools off in the water and heads back. When he gets home, he gets washed with the hose, shampoo, and conditioner.
             Then he dries off and eats. He passes out for about seven hours, sleeping all over the house with his legs in the air.
         </p>
 
