--- a/Website/index.html
+++ b/Website/index.html
@@ -22,7 +22,7 @@
             <!--<img src="Downloads/58aeffb2c869e092af51ee74.png" style="width:100;height:100;"/>-->
         </p>
         <nav>
-            <div><b>Follow Dozer on Insta!</b></div> <a href="https://www.instagram.com/dozer.the.doggg/?hl=af">here</a>
+            <div><p class="insta"><b>Follow Dozer on Insta!</b></p></div> <a href="https://www.instagram.com/dozer.the.doggg/?hl=af">here</a>
             <br>
             <br>
             <div>Follow</div> <a href="https://github.com/mikeizbicki/cmc-csci040">CSCI040</a> <div>and follow</div> <a href="https://izbicki.me">my professor</a>
