--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -18,6 +18,7 @@
         <p>
             <h1><body>Dozer is a good boy!</body></h1>
         </p>
+        <p class="insta">His nicknames include D-Dog, DZ, Dawg, Doziah, Doziahs, Baby Boy, etc.</p>
 
         <p> <span>
             Dozer is a yellow lab. He is almost two years old and over one-hunred pounds! He doesn't realize how big he is. Although he weighs as much as some of my friends, he is a lap-dog. He loves cuddles.
