--- a/Website/index.html
+++ b/Website/index.html
@@ -28,7 +28,7 @@
             <div>Follow</div> <a href="https://github.com/mikeizbicki/cmc-csci040">CSCI040</a> <div>and follow</div> <a href="https://izbicki.me">my professor</a>
             <br>
             <br>
-            <div>Check out</div> <a href="https://tkapoor22.github.io/">this food diary</a>
+            <div>Check out</div> <a href="https://tkapoor22.github.io/">Tanya's food diary</a>
             <br>
             <br>
             <div>Check out</div> <a href="https://rmagill22.github.io/">these cats</a>
