--- a/Website/cutepics.html
+++ b/Website/cutepics.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name=description content="Cute pictures of my dog Dozer.">
         <title>CUTE DOZER PICS</title>
         <link rel='stylesheet' href='css/main.css'>
     </head>
@@ -7,7 +8,7 @@
         <header>
             <h1><strong>CUTE DOZER PICS</strong></h1>
         </header>
-        <h1><img src="img/IMG_6839.jpg" style="width:500;height:500;"/></h1>
+        <h1><img src="img/IMG_6839.jpg" style="width:500;height:500;" alt="Dozer laying on a carpet with his head under a chair."/></h1>
         <p>
 
         </p>
