--- a/Website/cursedpics.html
+++ b/Website/cursedpics.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name=description content="Cursed pictures of my dog Dozer.">
         <title>CURSED DOZER PICS</title>
         <link rel='stylesheet' href='css/main.css'>
     </head>
