--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta name=description content="Learn about my dog Dozer and his daily routine.">
         <title>ABOUT DOZER</title>
         <link rel='stylesheet' href='css/main.css'>
     </head>
@@ -8,10 +9,10 @@
             <h1><strong>ABOUT DOZER</strong></h1>
         <p>
 
-        <!-- </p>
+        </p>
         <h1>
-            <img src='img/about.jpg'></img>
-        </h1> -->
+            <img src='img/about.jpg' alt="Dozer sitting and looking cute."/>
+        </h1>
         <p>
 
         </p>
