--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -11,7 +11,7 @@
 
         </p>
         <h1>
-            <img src='img/about.jpg' alt="Dozer sitting and looking cute."/>
+            <img src="img/about.jpg" alt="Dozer sitting and looking cute."/>
         </h1>
         <p>
 
