--- a/Website/cutepics.html
+++ b/Website/cutepics.html
@@ -8,7 +8,7 @@
         <header>
             <h1><strong>CUTE DOZER PICS</strong></h1>
         </header>
-        <h1><img src="img/IMG_6839.jpg" style="width:500;height:500;" alt="Dozer laying on a carpet with his head under a chair."/></h1>
+        <h1><img src="img/IMG_6839.jpg" style="width:500;height:500;" alt="Baby Dozer being held up."/></h1>
         <p>
 
         </p>
