--- a/Website/cursedpics.html
+++ b/Website/cursedpics.html
@@ -17,4 +17,17 @@
             <body><span>Mood.</span></body>   
         </p>
         <img src='img/five.jpg' style="width:500;height:500;"></img>
+            <div id="fb-root"></div>
+            <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="9OZdb9rS"></script>
+            <div class="fb-like" data-href="https://mel088.github.io/" data-width="" data-layout="box_count" data-action="like" data-size="large" data-share="true"></div>
+            <br>
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176706125-1"></script>
+            <script>
+             window.dataLayer = window.dataLayer || [];
+             function gtag(){dataLayer.push(arguments);}
+             gtag('js', new Date());
+
+             gtag('config', 'UA-176706125-1');
+            </script>  
 </html>
