--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -19,7 +19,7 @@
         <p>
             <h1><body>Dozer is a good boy!</body></h1>
         </p>
-        <p class="insta">His nicknames include D-Dog, DZ, Dawg, Doziah, Doziahs, Baby Boy, etc.</p>
+
 
         <p> <span>
             Dozer is a yellow lab. He is almost two years old and over one-hunred pounds! He doesn't realize how big he is. Although he weighs as much as some of my friends, he is a lap-dog. He loves cuddles.
@@ -34,7 +34,21 @@
             treats and then he lays on my mom's lap to eat a big treat. <div>After that, he barks a bit until he <span>dozes</span> off to sleep again.</div>
         </p>
 
+
         </header>
+            <div id="fb-root"></div>
+            <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="9OZdb9rS"></script>
+            <div class="fb-like" data-href="https://mel088.github.io/" data-width="" data-layout="box_count" data-action="like" data-size="large" data-share="true"></div>
+            <br>
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176706125-1"></script>
+            <script>
+             window.dataLayer = window.dataLayer || [];
+             function gtag(){dataLayer.push(arguments);}
+             gtag('js', new Date());
+
+             gtag('config', 'UA-176706125-1');
+            </script>  
 
        
 </html>
