--- a/Website/cutepics.html
+++ b/Website/cutepics.html
@@ -10,11 +10,30 @@
         </header>
         <h1><img src="img/IMG_6839.jpg" style="width:500;height:500;" alt="Baby Dozer being held up."/></h1>
         <p>
-
         </p>
+        <p class="insta">The day we got Dozer.<div>December 18, 2019.</div>
+        </p>
+        
         <h1><img src="img/eight.jpg" style="width:500;height:500;"/></h1>
         <p>
-            
+
+        </p>
+        <p class="insta">Dozer's nicknames include: <div>D-Dog, DZ, Dawg, Doziah, Doziahs, Baby Boy, Baby, Bean, etc.</div>
         </p>
         <h1><img src="img/seven.jpg" style="width:500;height:500;"/></h1>
+        <p class="insta">Dozer likes laying on people's laps. <div>He is agressively loving.</div>
+        </p>
+            <div id="fb-root"></div>
+            <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="9OZdb9rS"></script>
+            <div class="fb-like" data-href="https://mel088.github.io/" data-width="" data-layout="box_count" data-action="like" data-size="large" data-share="true"></div>
+            <br>
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176706125-1"></script>
+            <script>
+             window.dataLayer = window.dataLayer || [];
+             function gtag(){dataLayer.push(arguments);}
+             gtag('js', new Date());
+
+             gtag('config', 'UA-176706125-1');
+            </script>  
 </html>
