--- a/Website/cursedpics.html
+++ b/Website/cursedpics.html
@@ -8,6 +8,13 @@
         <header>
             <h1><strong>CURSED DOZER PICS</strong></h1>
         </header>
+        <nav>
+            <b><a rel="follow" href="https://mel088.github.io/Website/index.html"><li>BACK</li></a></b>
+            <ol>
+                <a rel="follow" href="https://mel088.github.io/Website/cutepics.html"><li>Cute Dozer Pics</li></a>
+                <a rel="follow" href="https://mel088.github.io/Website/aboutdozer.html"><li>About Dozer</li></a>
+            </ol>
+        </nav>
         <!--<img src='img/six.jpg' style="width:500;height:500;" alt="A blurry picture of my yellow lab Dozer looking off into the distance."></img>
         <p>
 
@@ -29,5 +36,6 @@
              gtag('js', new Date());
 
              gtag('config', 'UA-176706125-1');
-            </script>  
+            </script> 
+        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 </html>
