--- a/Website/cutepics.html
+++ b/Website/cutepics.html
@@ -8,6 +8,13 @@
         <header>
             <h1><strong>CUTE DOZER PICS</strong></h1>
         </header>
+        <nav>
+            <b><a rel="follow" href="https://mel088.github.io/Website/index.html">BACK</a></b>
+            <ol>
+                <a rel="follow" href="https://mel088.github.io/Website/cursedpics.html"><li>Cursed Dozer Pics</li></a>
+                <a rel="follow" href="https://mel088.github.io/Website/aboutdozer.html"><li>About Dozer</li></a>
+            </ol>
+        </nav>
         <h1><img src="img/IMG_6839.jpg" style="width:500;height:500;" alt="Baby Dozer being held up."/></h1>
         <p>
         </p>
