--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -7,6 +7,14 @@
     <body>
         <header>
             <h1><strong>ABOUT DOZER</strong></h1>
+        </header>
+        <nav>
+            <b><a rel="follow" href="https://mel088.github.io/Website/index.html">BACK</a></b>
+            <ol>
+                <a rel="follow" href="https://mel088.github.io/Website/cutepics.html"><li>Cute Dozer Pics</li></a>
+                <a rel="follow" href="https://mel088.github.io/Website/cursedpics.html"><li>Cursed Dozer Pics</li></a>
+            </ol>
+        </nav>
         <p>
 
         </p>
@@ -35,7 +43,8 @@
         </p>
 
 
-        </header>
+
+
             <div id="fb-root"></div>
             <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="9OZdb9rS"></script>
             <div class="fb-like" data-href="https://mel088.github.io/" data-width="" data-layout="box_count" data-action="like" data-size="large" data-share="true"></div>
