--- a/Website/cutepics.html
+++ b/Website/cutepics.html
@@ -30,6 +30,10 @@
         <h1><img src="img/seven.jpg" style="width:500;height:500;"/></h1>
         <p class="insta">Dozer likes laying on people's laps. <div>He is agressively loving.</div>
         </p>
+        <p> <span>
+            Dozer likes being the center of attention. If you do not give him attention, he will attack you with dog kisses and hugs until you show him affection.
+            </span>
+        </p>
             <div id="fb-root"></div>
             <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="9OZdb9rS"></script>
             <div class="fb-like" data-href="https://mel088.github.io/" data-width="" data-layout="box_count" data-action="like" data-size="large" data-share="true"></div>
