--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -27,11 +27,12 @@
         <p>
             <h1><body>Dozer is a good boy!</body></h1>
         </p>
-
+        <p class="insta">Dozer's nicknames include: D-Dog, DZ, Dawg, Doziah, Doziahs, Baby Boy, Baby, Bean, etc.
+        </p>
 
         <p> <span>
             Dozer is a yellow lab. He is almost two years old and over one-hunred pounds! He doesn't realize how big he is. Although he weighs as much as some of my friends, he is a lap-dog. He loves cuddles.
-            </span>
+          </span>
         </p>
 
         <p class="special">Dozer loves his daily routine. He starts off his day with a trail run to the creek. He cools off in the water and heads back. When he gets home, he gets washed with the hose, shampoo, and conditioner.</p>
@@ -40,6 +41,15 @@
         <p>
             In the afternoon, he eats again and goes on a walk around the neighborhood. He is very social with the other dogs and he loves people. When he gets home, we reward him with
             treats and then he lays on my mom's lap to eat a big treat. <div>After that, he barks a bit until he <span>dozes</span> off to sleep again.</div>
+        </p>
+
+        <p>
+            <div>Dozer</div>
+            <div>would</div>
+            <div>love</div>
+            <div>to</div>
+            <div>meet</div>
+            <div>you!</div>
         </p>
 
 
