--- a/Website/cutepics.html
+++ b/Website/cutepics.html
@@ -18,17 +18,17 @@
         <h1><img src="img/IMG_6839.jpg" style="width:500;height:500;" alt="Baby Dozer being held up."/></h1>
         <p>
         </p>
-        <p class="insta">The day we got Dozer.<div>December 18, 2019.</div>
+        <p class="insta">The day we got Dozer.<div>December 18, 2018.</div>
         </p>
         
         <h1><img src="img/eight.jpg" style="width:500;height:500;"/></h1>
         <p>
 
         </p>
-        <p class="insta">Dozer's nicknames include: <div>D-Dog, DZ, Dawg, Doziah, Doziahs, Baby Boy, Baby, Bean, etc.</div>
+        <p class="insta">Two months old. <div>February 14, 2019.</div>
         </p>
         <h1><img src="img/seven.jpg" style="width:500;height:500;"/></h1>
-        <p class="insta">Dozer likes laying on people's laps. <div>He is agressively loving.</div>
+        <p class="insta">Dozer likes laying on people's laps. <div>May 18, 2020.</div>
         </p>
         <p> <span>
             Dozer likes being the center of attention. If you do not give him attention, he will attack you with dog kisses and hugs until you show him affection.
