--- a/Website/cursedpics.html
+++ b/Website/cursedpics.html
@@ -15,15 +15,18 @@
                 <a rel="follow" href="https://mel088.github.io/Website/aboutdozer.html"><li>About Dozer</li></a>
             </ol>
         </nav>
-        <!--<img src='img/six.jpg' style="width:500;height:500;" alt="A blurry picture of my yellow lab Dozer looking off into the distance."></img>
-        <p>
-
-        </p>-->
+        <img src="img/six.jpg" style="width:500;height:500;" alt="A blurry picture of my yellow lab Dozer looking off into the distance."></img>
+        <p class="insta">Dozer looking off into the distance.<div>June 21, 2020.</div>
+        </p>
         <img src='img/fourth.jpg' style="width:500;height:500;" alt="Dozer laying on a carpet with his head under a chair."></img>
         <p>
             <body><span>Mood.</span></body>   
         </p>
+        <p class="insta">Dozer seeks shelter under chair.<div>April 5, 2020.</div>
+        </p>
         <img src='img/five.jpg' style="width:500;height:500;"></img>
+        <p class="insta">Dozer scared me.<div>June 6, 2019.</div>
+        </p>
             <div id="fb-root"></div>
             <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="9OZdb9rS"></script>
             <div class="fb-like" data-href="https://mel088.github.io/" data-width="" data-layout="box_count" data-action="like" data-size="large" data-share="true"></div>
