--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -40,7 +40,7 @@
 
         <p>
             In the afternoon, he eats again and goes on a walk around the neighborhood. He is very social with the other dogs and he loves people. When he gets home, we reward him with
-            treats and then he lays on my mom's lap to eat a big treat. <div>After that, he barks a bit until he <span>dozes</span> off to sleep again.</div>
+            treats and then he lays on my mom's lap to eat a big treat. After that, he barks a bit until he <span>dozes</span> off to sleep again.
         </p>
 
         <p>
