--- a/Website/cursedpics.html
+++ b/Website/cursedpics.html
@@ -15,7 +15,7 @@
                 <a rel="follow" href="https://mel088.github.io/Website/aboutdozer.html"><li>About Dozer</li></a>
             </ol>
         </nav>
-        <img src="img/six.jpg" style="width:500;height:500;" alt="A blurry picture of my yellow lab Dozer looking off into the distance."></img>
+        <img src='img/curse.jpg' style="width:500;height:500;" alt="A blurry picture of my yellow lab Dozer looking off into the distance."></img>
         <p class="insta">Dozer looking off into the distance.<div>June 21, 2020.</div>
         </p>
         <img src='img/fourth.jpg' style="width:500;height:500;" alt="Dozer laying on a carpet with his head under a chair."></img>
