--- a/Website/index.html
+++ b/Website/index.html
@@ -17,7 +17,7 @@
                 <a rel="follow" href="https://mel088.github.io/Website/aboutdozer.html"><li>About Dozer</li></a>
             </ol>
         </nav>
-        <h1><img src="img/front.jpg" style="width:1000;height:1000;"/></h1>
+        <h1><img src="img/front.jpg" style="width:1000;height:1000;" alt="Happy Dozer sitting on a couch."/></h1>
         <p>
             <!--<img src="Downloads/58aeffb2c869e092af51ee74.png" style="width:100;height:100;"/>-->
         </p>
@@ -41,6 +41,16 @@
             <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="9OZdb9rS"></script>
             <div class="fb-like" data-href="https://mel088.github.io/" data-width="" data-layout="box_count" data-action="like" data-size="large" data-share="true"></div>
             <br>
+            <p> <span>Thanks for checking out my site!</span>
+            </p>
+
+            <p>
+                I think my Facebook link is broken...
+            </p>
+
+            <p>
+                ...only cool people can like it.
+            </p>
             <!-- Global site tag (gtag.js) - Google Analytics -->
             <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176706125-1"></script>
             <script>
