--- a/Website/index.html
+++ b/Website/index.html
@@ -5,7 +5,7 @@
         <title>DOZER</title>
         <link rel='stylesheet' href='css/main.css'>
     </head>
-    <body>
+    <body style="background-image: url('img/front.jpg');">
         <header>
             <h1><strong>DOZER THE DOG</strong></h1>
         </header>
