--- a/Website/aboutdozer.html
+++ b/Website/aboutdozer.html
@@ -9,7 +9,7 @@
             <h1><strong>ABOUT DOZER</strong></h1>
         </header>
         <nav>
-            <b><a rel="follow" href="https://mel088.github.io/Website/index.html">BACK</a></b>
+            <b><a rel="follow" href="https://mel088.github.io/Website/index.html">HOME</a></b>
             <ol>
                 <a rel="follow" href="https://mel088.github.io/Website/cutepics.html"><li>Cute Dozer Pics</li></a>
                 <a rel="follow" href="https://mel088.github.io/Website/cursedpics.html"><li>Cursed Dozer Pics</li></a>
