--- a/Website/index.html
+++ b/Website/index.html
@@ -28,18 +28,18 @@
             <div>Follow</div> <a href="https://github.com/mikeizbicki/cmc-csci040">CSCI040</a> <div>and follow</div> <a href="https://izbicki.me">my professor</a>
             <br>
             <br>
-            <div>Check out</div> <a href="https://tkapoor22.github.io/">Tanya's food diary</a>
+            <div>Check out</div> <a href="https://tkapoor22.github.io/">Tanya's food diary!</a>
             <br>
             <br>
-            <div>Check out</div> <a href="https://rmagill22.github.io/">these cats</a>
+            <div>Check out</div> <a href="https://rmagill22.github.io/">these cats!</a>
             <br>
             <br>
-            <div>Check out</div> <a href="https://ymacias-1.github.io/webpage/">more cute animals</a>
+            <div>Check out</div> <a href="https://ymacias-1.github.io/webpage/">more cute animals!</a>
             <br>
             <br>
 
         
-            <p> <span>Thanks for checking out my site!</span>
+            <p> <span>Thanks for checking out my site! </span>
             </p>
 
             <p>
