--- a/Website/cursedpics.html
+++ b/Website/cursedpics.html
@@ -28,6 +28,10 @@
         <img src='img/five.jpg' style="width:500;height:500;"></img>
         <p class="insta">Dozer scared me.<div>June 6, 2019.</div>
         </p>
+        <p> <span>
+            Although Dozer likes cuddles, don't pet him while he is sleeping.
+        </span>
+        </p>
             <div id="fb-root"></div>
             <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0" nonce="9OZdb9rS"></script>
             <div class="fb-like" data-href="https://mel088.github.io/" data-width="" data-layout="box_count" data-action="like" data-size="large" data-share="true"></div>
