--- a/.vscode/hw02/index.html
+++ b/.vscode/hw02/index.html
@@ -22,7 +22,7 @@
           </span>
         </p>
 
-        <div>Check out</div> <a href="https://bestfriends.org">to help out!</a>
+        <div></div> <a href="https://bestfriends.org">I want to help out!</a>
             <br>
             <br>
 
