--- a/hw02/index.html
+++ b/hw02/index.html
@@ -12,7 +12,7 @@
 
         </p>
         <p>
-            <h1><body>Some animals need extra protecting. As you saw from my graphs, endangered species are becoming more and more prevalent.</body></h1>
+            <h1><body>Some animals need extra protecting. The number of endangered species is increasing over the years.</body></h1>
         </p>
         <p class="insta">What can you do?
         </p>
